k8s/network-policy/allow-istio-sidecar.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-istio-sidecar
  namespace: default
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: istio-system
      ports:                   
        - port: 15021
          protocol: TCP
        - port: 15090
          protocol: TCP
        - port: 15020
          protocol: TCP
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: istio-system
      ports:                   
        - port: 15021
          protocol: TCP
        - port: 15012
          protocol: TCP
        - port: 15443
          protocol: TCP
        - port: 15010
          protocol: TCP
        - port: 15014
          protocol: TCP
