k8s/network-policy/api-backend-service.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-api-to-backend
spec:
  podSelector:
    matchLabels:
      app: backend-service
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: api-service
  policyTypes:
    - Ingress
