k8s/network-policy/api.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      io.kompose.service: api-service
  policyTypes:
    - Ingress  
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.service: frontend-service
        - podSelector:
            matchLabels:
              io.kompose.service: backend-service
      ports:
        - protocol: TCP
          port: 8081
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    - to:
        - podSelector:
            matchLabels:
              io.kompose.service: backend-service
      ports:
        - protocol: TCP
          port: 8080
    - to:
        - podSelector:
            matchLabels:
              io.kompose.service: frontend-service
      ports:
        - protocol: TCP
          port: 80
