k8s/network-policy/be.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      io.kompose.service: backend-service
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.service: api-service
      ports:
        - protocol: TCP
          port: 8080
  egress:         
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    - to:                          
        - podSelector:
            matchLabels:
              io.kompose.service: api-service
      ports:
        - protocol: TCP
          port: 8081
