k8s/network-policy/frontend-api-service.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-to-api
spec:
  podSelector:
    matchLabels:
      io.kompose.service: api-service
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.service: frontend-service
  policyTypes:
    - Ingress
